[gd_scene load_steps=18 format=2]

[ext_resource path="res://Upper Jaw.png" type="Texture" id=1]
[ext_resource path="res://Lower Jaw.png" type="Texture" id=2]
[ext_resource path="res://Dragon.gd" type="Script" id=3]
[ext_resource path="res://Circle.gd" type="Script" id=4]
[ext_resource path="res://Orb.png" type="Texture" id=5]
[ext_resource path="res://Orb.gd" type="Script" id=6]
[ext_resource path="res://roar.wav" type="AudioStream" id=7]

[sub_resource type="PhysicsMaterial" id=6]
bounce = 0.84

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0.00302115, 0.990909 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.4 ), 0.121212, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=9]
radius = 19.63

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UpperJaw:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LowerJaw:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "chase"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LowerJaw:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.164938, 1 ),
"update": 0,
"values": [ 0.0, 26.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UpperJaw:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.267943, 1 ),
"update": 0,
"values": [ 9.2, -1.6 ]
}

[sub_resource type="Animation" id=8]
resource_name = "chomp"
tracks/0/type = "value"
tracks/0/path = NodePath("LowerJaw:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 0.183011, 1 ),
"update": 0,
"values": [ -22.7, -22.7, 23.7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UpperJaw:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 0.196146, 1 ),
"update": 0,
"values": [ 33.8, 33.8, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "bite"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperJaw:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LowerJaw:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 25.5, 21.8 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 200.0

[sub_resource type="CircleShape2D" id=4]
radius = 20.0

[sub_resource type="CircleShape2D" id=7]
radius = 22.0227

[node name="Dragon" type="RigidBody2D"]
mass = 3.0
physics_material_override = SubResource( 6 )
linear_damp = 0.5
script = ExtResource( 3 )

[node name="BodyTrailStart" type="Position2D" parent="."]
position = Vector2( 40, -9 )

[node name="BodyLine" type="Line2D" parent="."]
width = 50.0
width_curve = SubResource( 10 )
default_color = Color( 0.768627, 0.580392, 0.482353, 1 )

[node name="DeadArea" type="Area2D" parent="."]
show_behind_parent = true
position = Vector2( 111, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadArea"]
shape = SubResource( 9 )

[node name="Orb" type="Sprite" parent="DeadArea"]
show_behind_parent = true
position = Vector2( -1.00001, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="UpperJaw" type="Sprite" parent="."]
position = Vector2( 1, 3 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
offset = Vector2( -60, -70 )

[node name="LowerJaw" type="Sprite" parent="."]
position = Vector2( 2, 9 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
offset = Vector2( -110, 75 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/chase = SubResource( 2 )
anims/chomp = SubResource( 8 )
anims/idle = SubResource( 3 )

[node name="AggroArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="DangerCircle" type="Line2D" parent="."]
points = PoolVector2Array( -17, -330, -149, -211, -238, 5, -196, 156, 95, 222, 248, -10, 291, -167, 155, -316 )
width = 2.0
default_color = Color( 1, 0, 0, 0.337255 )
antialiased = true
script = ExtResource( 4 )

[node name="ChompArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChompArea"]
position = Vector2( -39, 5 )
shape = SubResource( 7 )

[node name="Roar" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="DeadArea" to="." method="_on_DeadArea_body_entered"]
[connection signal="body_entered" from="ChompArea" to="." method="_on_ChompArea_body_entered"]
